# arches-modular-reports

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .prettierrc  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  eslint.config.mjs  gettext.config.js  manage.py  package-lock.json  package.json  pyproject.toml  tsconfig.json  vitest.config.mts
.github/actions/build-and-test-branch/: action.yml
.github/workflows/: main.yml  release_deploy.yml
arches_modular_reports/: __init__.py  apps.py  config_generator_registry.py  config_generators.py  models.py  settings.py  settings_local.py  signals.py  urls.py  urls_local.py
arches_modular_reports/app/utils/: config.py  decorators.py  get_report_config.py  nodegroup_tile_data_utils.py  resource_utils.py
arches_modular_reports/app/views/: card_editor.py  editable_report.py  modular_report.py
arches_modular_reports/management/commands/: report_configs.py
arches_modular_reports/migrations/: 0001_initial.py  0002_add_editable_report.py  0004_handle_for_concept_label_subregions.py  0006_improve_reportconfig_related_name.py  0007_reportconfig_slug.py  0008_update_nodevalue_db_call.py
arches_modular_reports/src/arches_modular_reports/: utils.ts
arches_modular_reports/templates/: arches_urls.htm
arches_provenance/: admin.py  apps.py  celery.py  hosts.py  models.py  package.json  settings.py  settings_local.py  tasks.py  urls.py  wsgi.py
arches_provenance/app/utils/: context_processors.py  decorators.py  filter_report_configuration.py  label_based_graph_with_branch_export.py  nodegroup_tile_data_utils.py  resource_utils.py  update_report_configuration_for_nodegroup_permissions.py
arches_provenance/app/views/: auth.py  card_editor.py  editable_report.py  provenance_report.py  related_resource.py  resource.py  search.py  user.py
arches_provenance/datatypes/: url.py
arches_provenance/etl_modules/: Resources_merge.py
arches_provenance/formatters/: json_ld.py
arches_provenance/media/css/: project.css
arches_provenance/migrations/: 0001_initial.py  0002_add_editable_report.py  0002_alter_reportconfig_graph.py  0003_pretty_print_config.py  0004_handle_for_concept_label_subregions.py  0005_add_report_configs.py  0006_add_bulk_merge.py  0006_exclude_branches_from_choices.py  11500_change_default_standard_search.py  15550_delete_map.py  212_remove_old_group_report.py
arches_provenance/report_configs/: activity.json  group.json  person.json  place.json  provenance.json  visual_work.json
arches_provenance/reports/: activity.json  group.json  person.json  physical_object.json  place.json  provenance.json  provenance_activity_report.json  provenance_group_report.json  set.json  textual_work.json  visual_work.json
arches_provenance/search_components/: search_results.py
arches_provenance/system_settings/: System_Settings.json
arches_provenance/templates/: arches_urls.htm  base-manager.htm  base.htm  index.htm  javascript.htm  login.htm
arches_provenance/webpack/: webpack.common.js  webpack.config.dev.js
docker/: entrypoint.sh  env_file.env  settings_docker.py
docker/webpack/: Dockerfile  entrypoint.sh  env_file.env
releases/: 1.0.0.md  1.0.0b0.md  1.0.0b1.md  1.0.0b2.md
tests/: test_config_generator_registry.py  test_report_config.py  test_report_config_command.py  test_settings.py
tests/search_indexes/: sample_index_tests.py
(+123 files in other folders)
