[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "arches_provenance"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "arches@git+https://github.com/archesproject/arches.git@08e846bd8208a155ea975ac424000b65ba159578"
]
version = "0.0.1"

[tool.setuptools]
packages = ["arches_provenance"]

[tool.black]
line-length = 140
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''